[package]
name = "esp32"
version = "0.33.0"
edition = "2021"
rust-version = "1.76"
description = "Peripheral access crate for the ESP32"
repository = "https://github.com/esp-rs/esp-pacs"
license = "MIT OR Apache-2.0"
keywords = [
    "embedded",
    "esp32",
    "no-std",
    "wifi",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
include = [
    "src/**",
    "build.rs",
    "device.x",
]

[lib]
bench = false
test = false

[dependencies]
critical-section = { version = "1.1.3", optional = true }
vcell = "0.1.3"
defmt = { version = "0.3.8", optional = true }

[features]
default = []
rt = []
impl-register-debug = []
defmt = ["dep:defmt"]
