[package]
name = "esp32c3"
version = "0.13.0"
authors = [
    "Samir Shetty <samirshetty23@gmail.com>",
    "Jesse Braham <jesse@beta7.io>",
]
edition = "2021"
description = "Peripheral access crate for the ESP32-C3"
documentation = "https://docs.rs/esp32c3/"
readme = "README.md"
repository = "https://github.com/esp-rs/esp-pacs"
license = "MIT OR Apache-2.0"
keywords = [
    "no-std",
    "esp32c3",
    "wifi",
    "embedded",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
include = [
    "/src/**",
    "build.rs",
    "device.x"
]

[dependencies]
critical-section = { version = "1.1.1", optional = true }
vcell = "0.1.3"

[features]
default = []
rt = []
