[package]
name = "esp32c3"
version = "0.21.0"
edition = "2021"
rust-version = "1.76"
description = "Peripheral access crate for the ESP32-C3"
repository = "https://github.com/esp-rs/esp-pacs"
license = "MIT OR Apache-2.0"
keywords = [
    "no-std",
    "esp32c3",
    "wifi",
    "embedded",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
include = [
    "src/**",
    "build.rs",
    "device.x"
]

[lib]
bench = false
test = false

[dependencies]
critical-section = { version = "1.1.1", optional = true }
vcell = "0.1.3"

[features]
default = []
rt = []
impl-register-debug = []
