[package]
name = "esp32h2"
version = "0.13.0"
edition = "2021"
rust-version = "1.76"
description = "Peripheral access crate for the ESP32-H2"
repository = "https://github.com/esp-rs/esp-pacs"
license = "MIT OR Apache-2.0"
keywords = [
    "no-std",
    "esp32h2",
    "wifi",
    "embedded",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
include = [
    "src/**",
    "build.rs",
    "device.x"
]

[lib]
bench = false
test = false

[dependencies]
critical-section = { version = "1.2.0", optional = true }
defmt            = { version = "0.3.8", optional = true }
riscv            = "0.12.1"
riscv-peripheral = "0.2.0"
vcell            = "0.1.3"

[features]
default             = []
defmt               = ["dep:defmt"]
impl-register-debug = []
rt                  = []
