[package]
name = "esp32s2-ulp"
version = "0.4.0"
edition = "2021"
rust-version = "1.76"
description = "Peripheral access crate for the ESP32-S2's RISC-V ULP coprocessor"
repository = "https://github.com/esp-rs/esp-pacs"
license = "MIT OR Apache-2.0"
keywords = [
    "no-std",
    "esp32s2",
    "wifi",
    "embedded",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
include = [
    "src/**",
    "build.rs",
    "device.x"
]

[lib]
bench = false
test = false

[dependencies]
critical-section = { version = "1.1.1", optional = true }
vcell = "0.1.3"
defmt = { version = "0.3.6", optional = true }

[features]
default = []
rt = []
impl-register-debug = []
defmt = ["dep:defmt"]
