[package]
name = "esp32s2"
version = "0.2.0"
authors = ["Jesse Braham <jesse@beta7.io>"]
edition = "2021"
rust-version = "1.58"
readme = "README.md"
repository = "https://github.com/esp-rs/esp-pacs"
description = "Peripheral access crate for the ESP32-S2"
keywords = [
    "embedded",
    "esp32s2",
    "no-std",
    "wifi",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
include = [
    "/src/**",
    "build.rs",
    "device.x",
]
license = "MIT OR Apache-2.0"

[dependencies]
bare-metal = "1.0"
vcell = "0.1"
xtensa-lx = "0.7.0"
xtensa-lx-rt = { version = "0.12.0", optional = true }

[features]
default = ["xtensa-lx/esp32s2"]
rt = ["xtensa-lx-rt/esp32s2"]
