[package]
name = "esp32s2"
version = "0.10.0"
authors = ["Jesse Braham <jesse@beta7.io>"]
edition = "2021"
rust-version = "1.60"
readme = "README.md"
repository = "https://github.com/esp-rs/esp-pacs"
description = "Peripheral access crate for the ESP32-S2"
keywords = [
    "embedded",
    "esp32s2",
    "no-std",
    "wifi",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
include = [
    "/src/**",
    "build.rs",
    "device.x",
]
license = "MIT OR Apache-2.0"

[dependencies]
critical-section = { version = "1.1.1", optional = true }
vcell = "0.1.3"
xtensa-lx = "0.7.0"
xtensa-lx-rt = { version = "0.14.0", optional = true }

[features]
default = ["xtensa-lx/esp32s2"]
rt = ["xtensa-lx-rt/esp32s2"]
