[package]
name = "esp32s2"
version = "0.29.0"
edition = "2021"
rust-version = "1.76"
description = "Peripheral access crate for the ESP32-S2"
repository = "https://github.com/esp-rs/esp-pacs"
license = "MIT OR Apache-2.0"
keywords = [
    "embedded",
    "esp32s2",
    "no-std",
    "wifi",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
include = [
    "src/**",
    "build.rs",
    "device.x",
]

[lib]
bench = false
test = false

[dependencies]
critical-section = { version = "1.2.0", optional = true }
vcell = "0.1.3"
defmt = { version = "1.0.1", optional = true }

[features]
default = []
rt = []
impl-register-debug = []
defmt = ["dep:defmt"]
