[package]
name = "esp32s3"
version = "0.13.0"
authors = ["Jesse Braham <jesse@beta7.io>"]
edition = "2021"
rust-version = "1.60"
readme = "README.md"
repository = "https://github.com/esp-rs/esp-pacs"
description = "Peripheral access crate for the ESP32-S3"
keywords = [
    "embedded",
    "esp32-s3",
    "no-std",
    "wifi",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
include = [
    "/src/**",
    "build.rs",
    "device.x"
]
license = "MIT OR Apache-2.0"

[dependencies]
critical-section = { version = "1.1.1", optional = true }
vcell = "0.1.3"
xtensa-lx = "0.7.0"

[features]
default = ["xtensa-lx/esp32s3"]
rt = []
