[package]
name = "esp32s3"
version = "0.23.0"
edition = "2021"
rust-version = "1.67"
description = "Peripheral access crate for the ESP32-S3"
repository = "https://github.com/esp-rs/esp-pacs"
license = "MIT OR Apache-2.0"
keywords = [
    "embedded",
    "esp32s3",
    "no-std",
    "wifi",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
include = [
    "src/**",
    "build.rs",
    "device.x"
]

[lib]
bench = false
test = false

[dependencies]
critical-section = { version = "1.1.1", optional = true }
vcell = "0.1.3"
xtensa-lx = "0.9.0"

[features]
default = ["xtensa-lx/spin"]
rt = []
impl-register-debug = []
