[package]
name = "esp32s3"
version = "0.35.1"
edition = "2021"
rust-version = "1.76"
description = "Peripheral access crate for the ESP32-S3"
repository = "https://github.com/esp-rs/esp-pacs"
license = "MIT OR Apache-2.0"
keywords = [
    "embedded",
    "esp32s3",
    "no-std",
    "wifi",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
include = [
    "src/**",
    "build.rs",
    "device.x"
]

[lib]
bench = false
test = false

[dependencies]
vcell = "0.1.3"
defmt = { version = "1.0.1", optional = true }

[features]
default = []
rt = []
# Remove next minor: https://github.com/esp-rs/esp-pacs/issues/428
critical-section = []
impl-register-debug = []
defmt = ["dep:defmt"]
