[package]
name = "esp8266"
version = "0.3.0"
description = "A minimal peripheral access crate the ESP8266"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
repository = "https://github.com/esp-rs/esp-pacs"
license = "MIT OR Apache-2.0"
include = ["/src/**"]

[dependencies]
bare-metal = "1.0.0"
vcell = "0.1.3"
xtensa-lx = "0.6.0"
xtensa-lx-rt = { version = "0.9.0", optional = true }

[features]
default = []
rt = ["xtensa-lx-rt"]

[profile.dev]
lto = false
opt-level = 1

[profile.release]
lto = false
