[package]
name = "esp8266"
version = "0.6.0"
authors = [
    "Robin Appelman <robin@icewind.nl>",
    "Jesse Braham <jesse@beta7.io>",
]
edition = "2021"
readme = "README.md"
repository = "https://github.com/esp-rs/esp-pacs"
description = "Peripheral access crate for the ESP8266"
keywords = [
    "embedded",
    "esp8266",
    "no-std",
    "wifi",
]
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
include = [
    "/src/**",
    "build.rs",
    "device.x",
]
license = "MIT OR Apache-2.0"

[dependencies]
bare-metal = "1.0"
vcell = "0.1"
xtensa-lx = "0.7.0"
xtensa-lx-rt = { version = "0.12.0", optional = true }

[features]
default = ["xtensa-lx/esp8266"]
rt = ["xtensa-lx-rt/esp8266"]

[profile.dev]
lto = false
opt-level = 1

[profile.release]
lto = false
